# 4sp4-2025-classroom-tutorial-01-tutorial-01-basics

./: CMakeLists.txt  README.md  build_run.sh  mac_id.txt  main_bench.cpp
include/: vec_op.h
src/: vec_op.cpp
test/: CMakeLists.txt  vec_op_test.cpp
